--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style_info.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="book.png" type="image/png">
+    <link rel="icon" href="flav.jpg" type="image/jpg">
 </head>
 
 <body>
@@ -17,22 +17,23 @@
 
 <p class = infotext>
 
-Hi, I'm Ray!<br><br>
-I'm a cogntive scientist, an NSERC doctoral fellow, and a member of the 
-Centre for Gambling Research at UBC Vancouver. <br><br>
+I'm Ray, an NSERC doctoral fellow and a member of the Centre for Gambling Research
+at UBC Vancouver. <br><br>
 
+I enjoy integrating perspectives from different fields to understand the impact
+of digital technology on people. Working with 
+ <a class = "newlink hover" href = "https://cgr.psych.ubc.ca/" target="_blank" rel="noopener noreferrer">Luke Clark</a>
+, my PhD focuses on modern gambling products.<br><br>
 
- My research interests are on higher-order cognitions, such as decision-making and emotions, and interactions between people
-and digital technology. My PhD focuses on modern gambling products.
+To this end, my work is quantitative in nature. Though, it does
+adopt a multi-method approach, integrating laboratory experiments with 
+intensive longitudinal surveys. It also focuses on how
+cognitions change <em>over time.</em>
+
 <br><br>
 
-To this end, I adopt a quantiative perspective and employ a multi-method approach, integrating laboratory experiments with 
-intensive longitudinal surveys. <br><br>
 
-My goal is to produce work that is rigorous, transparent, and (hopefully) innovative. This includes incoporating
- open science practices such as preregistration and making data and code publicly available.<br><br>
-
-Thanks for visiting and feel free to reach out! 😊
+Feel free to reach out. I'd be happy to chat. 😊
 
 </p>
 </div>
