--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style_home.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="book.png" type="image/png">
+    <link rel="icon" href="flav.jpg" type="image/jpg">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
 <!--Links-->
     <div class="socials">
-        <a href="https://ca.linkedin.com/in/raymondwu01" 
+        <a href="https://ca.linkedin.com/in/raywu01" 
           class = linkhover target="_blank" rel="noopener noreferrer"> 
             l i n k e d i n </a>
             &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
