--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style_info.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="book.png" type="image/png">
+    <link rel="icon" href="flav.jpg" type="image/jpg">
 </head>
 
 <body>
