--- a/about.html
+++ b/about.html
@@ -22,8 +22,7 @@ at UBC Vancouver. <br><br>
 
 I enjoy integrating perspectives from different fields to understand the impact
 of digital technology on people. Working with 
- <a class = "newlink hover" href = "https://cgr.psych.ubc.ca/" target="_blank" rel="noopener noreferrer">Luke Clark</a>
-, my PhD focuses on modern gambling products.<br><br>
+ <a class = "newlink hover" href = "https://cgr.psych.ubc.ca/" target="_blank" rel="noopener noreferrer">Luke Clark</a>, my PhD focuses on modern gambling products.<br><br>
 
 To this end, my work is quantitative in nature. Though, it does
 adopt a multi-method approach, integrating laboratory experiments with 
