--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@ I enjoy integrating perspectives from different fields to understand the impact
 of digital technology on people. Working with 
  <a class = "newlink hover" href = "https://cgr.psych.ubc.ca/" target="_blank" rel="noopener noreferrer">Luke Clark</a>, my PhD focuses on modern gambling products.<br><br>
 
-To this end, my work is quantitative in nature. Though, it does
-adopt a multi-method approach, integrating laboratory experiments with 
-intensive longitudinal surveys. It also focuses on how
+To this end, my research is quantitative in nature. It
+adopts a multi-method approach, integrating laboratory experiments with 
+intensive longitudinal surveys. My work also focuses on how
 cognitions change <em>over time.</em>
 
 <br><br>
 
 
-Feel free to reach out. I'd be happy to chat. 😊
+Feel free to reach out. I'm always happy to chat. 😊
 
 </p>
 </div>
