--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 g o o g l e &nbsp s c h o l a r</a>
         </div>
         <div class="navcenter">
-            <a href="#"></a> <!--Add full site link when ready-->
+            <a href="#"></a> 
         </div>
         <div class="navright">
             <a href="https://drive.google.com/file/d/12TRTp_MwbQUc6ugfE5H-nXqtvo_SwDXW/view?usp=sharing" 
@@ -53,11 +53,6 @@
             l i n k e d i n </a>
             &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-            <a href="https://bsky.app/profile/raymondwu.bsky.social" 
-            class = linkhover target="_blank" rel="noopener noreferrer"> 
-              b l u e s k y </a>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  
 
       
             <a href="mailto:rwu@psych.ubc.ca" 
